# rt1176-evkb

./: .gitignore  CLAUDE.md  LICENSE  README.md  evkb.cmake
adc_loopback_hw/: CMakeLists.txt  adc_loopback_hw.cpp
analog_test/: CMakeLists.txt  analog_test.cpp  run_qemu_adc.sh
audioinput_i2s_test/: CMakeLists.txt  audioinput_i2s_test.cpp  gen_inject.py  run_qemu_audioinput.sh
audiooutput_i2s_test/: CMakeLists.txt  audiooutput_i2s_test.cpp  check_tap.py  run_qemu_audiooutput.sh
audiostream_test/: CMakeLists.txt  run_qemu_audiostream.sh
blink/: CMakeLists.txt  blink.cpp
cm4_boot_test/: CMakeLists.txt  cm4_blob.h  cm4_probe_blob.s
cm4_dual_test/: CMakeLists.txt  README.md
cm4_hotswap2_test/: CMakeLists.txt  README.md  cm4_hotswap2_test.cpp  run_qemu.sh
cm4_hotswap_test/: CMakeLists.txt  README.md  transcript_hw_evkb.txt  transcript_qemu.txt
cm4_image_test/: CMakeLists.txt  README.md  cm4_image_test.cpp
cm4_image_test/cm4/: bin2header.py  build_cm4.sh
cm4_imagebank_test/: CMakeLists.txt  README.md  clean_boot.scp  transcript_hw_evkb.txt  transcript_qemu.txt
cm4_imagebank_test/cm4/: startup_cm4.S
cm4_intr_test/: CMakeLists.txt  README.md  cm4_intr_test.cpp  transcript_hw_evkb.txt  transcript_qemu.txt
cm4_spi_dma_test/: CMakeLists.txt  README.md  cm4_spi_dma_test.cpp  run_qemu.sh  transcript_qemu.txt
cm4_spi_test/: CMakeLists.txt  cm4_spi_test.cpp  run_qemu.sh
cm4_spi_test/cm4/: main_cm4.c
cm4_wire_dma_test/: CMakeLists.txt
cm4_wire_dma_test/cm4/: main_cm4.c
cm4_wire_int_master_test/: CMakeLists.txt  README.md  cm4_wire_int_master_test.cpp  run_qemu.sh  transcript_qemu.txt
cm4_wire_int_master_test/cm4/: cm4.ld  main_cm4.c  startup_cm4.S
cm4_wire_int_slave_test/: CMakeLists.txt  README.md  cm4_wire_int_slave_test.cpp  run_qemu.sh  transcript_hw_evkb.txt  transcript_qemu.txt
cm4_wire_int_slave_test/cm4/: main_cm4.c
cm4_wire_int_slave_test/ext_master/: ext_master.ino
cm4_wire_int_slave_test/toolchain/: rt1170-evkb.toolchain.cmake
cm4_wire_test/: CMakeLists.txt  README.md  run_qemu.sh  transcript_hw_evkb.txt  transcript_qemu.txt
dac_test/: CMakeLists.txt  HW-RESULTS.md  dac_test.cpp  run_qemu_dac.sh
docs/: HW-RESULTS-LICENSE-CLEANROOM.md  NEXT-SESSION-PROMPT-CAN.md  NEXT-SESSION-PROMPT-DISPLAYS.md  NEXT-SESSION-PROMPT-LICENSE-CLEANROOM.md  NEXT-SESSION-PROMPT-USB-HOST-MSC.md  QEMU_PERIPHERAL_STATUS.md  TEENSY-PARITY-GAPS.md  arduino-header-revc3.md
dualcore_mu_test/: CMakeLists.txt  README.md  dualcore_mu_test.cpp
edma_test/: CMakeLists.txt  edma_test.cpp  run_qemu_edma.sh
eeprom_test/: CMakeLists.txt  eeprom_test.cpp  run_qemu_eeprom.sh
enet_test/: CMakeLists.txt  HW-RESULTS.md  enet_peer.py  enet_test.cpp  run_qemu_enet.sh
ethernet_test/: CMakeLists.txt  ethernet_test.cpp  guestfwd_echo.py  run_qemu_ethernet.sh
eventresponder_test/: CMakeLists.txt  run_qemu_er.sh
examples/: README.md
examples/audio/audio_h_test/: CMakeLists.txt  COMPILE_SWEEP.md  audio_h_test.cpp  run_qemu.sh  transcript_hw_evkb.txt  transcript_qemu.txt
examples/audio/audioinput_i2s_test/: CMakeLists.txt
examples/audio/audiooutput_i2s_test/: CMakeLists.txt  audiooutput_i2s_test.cpp
examples/audio/filter_fir_test/: CMakeLists.txt  filter_fir_test.cpp  run_qemu.sh  transcript_hw_evkb.txt  transcript_qemu.txt
examples/audio/guard_sweep_test/: CMakeLists.txt  guard_sweep_test.cpp  run_qemu.sh  transcript_hw_evkb.txt  transcript_qemu.txt
examples/audio/guard_sweep_test/stub/: SerialFlash.h
examples/audio/i2s_int_test/: CMakeLists.txt  i2s_int_test.cpp  run_qemu.sh  transcript_hw_evkb.txt  transcript_qemu.txt
examples/audio/sai_rx_test/: CMakeLists.txt  gen_inject.py  sai_rx_test.cpp
examples/audio/sd_wav_play_test/: .gitignore  CMakeLists.txt  check_tap.py  run_qemu_sd_wav.sh  sd_wav_play_test.cpp
examples/audio/tone_hw/: CMakeLists.txt
examples/display/pxp_blit_test/: CMakeLists.txt  pxp_blit_test.cpp  run_qemu_pxp.sh  transcript_hw_evkb.txt  transcript_qemu.txt
examples/display/rpi_panel_test/: CMakeLists.txt  rpi_panel_test.cpp  run_qemu.sh  transcript_qemu.txt
examples/display/ssd1306_display/: CMakeLists.txt  ssd1306_display.cpp
examples/dualcore/cm4_audio_test/: CMakeLists.txt  cm4_audio_test.cpp  run_qemu.sh  transcript_hw_evkb.txt  transcript_hw_evkb_rxoverflow.txt  transcript_qemu.txt  transcript_qemu_fallback.txt
examples/dualcore/cm4_audio_test/cm4/: cm4.ld  codec_wm8962.c  codec_wm8962.h  main_cm4.cpp  runtime_stubs.c  startup_cm4.S
examples/dualcore/cm4_audiostream_test/: CMakeLists.txt  cm4_audiostream_test.cpp  run_qemu.sh  transcript_hw_evkb.txt  transcript_qemu.txt
examples/dualcore/cm4_audiostream_test/cm4/: main_cm4.cpp  mu_report.h  runtime_stubs.c  startup_cm4.S
extmem_test/: CMakeLists.txt  extmem_test.cpp
gpio_loopback_hw/: CMakeLists.txt
i2s_audio_test/: CMakeLists.txt  i2s_audio_test.cpp  run_qemu_i2s.sh
interval_timer_hw/: CMakeLists.txt  interval_timer_hw.cpp
interval_timer_test/: CMakeLists.txt  run_qemu_intervaltimer.sh
irq_attach_test/: CMakeLists.txt  run_qemu_irq.sh
lwip_test/: CMakeLists.txt  lwip_peer.py  lwip_test.cpp  run_qemu_lwip.sh
mkr_ssd1306_test/: mkr_ssd1306_test.ino
native_ethernet_test/: CMakeLists.txt  HW-RESULTS.md  native_ethernet_test.cpp  run_qemu_native_ethernet.sh
pwm_test/: CMakeLists.txt  measure_pwm.py
qemu_dcd_boot_test/: README.md  dcd_test.s
rtc_test/: CMakeLists.txt  rtc_test.cpp  run_qemu_rtc.sh
sai_rx_test/: CMakeLists.txt  check_tap.py  gen_inject.py  run_qemu_sai_rx.sh  sai_rx_test.cpp
sd_test/: CMakeLists.txt  sd_test.cpp
sd_wav_play_test/: CMakeLists.txt  check_tap.py  gen_wav.py
sdram_test/: CMakeLists.txt  run_qemu_sdram.sh  sdram_test.cpp
serial_test/: CMakeLists.txt  run_qemu.sh  serial_test.cpp
string_test/: CMakeLists.txt  string_test.cpp
usb_midi_test/: CMakeLists.txt
usb_mouse_test/: CMakeLists.txt  HW-RESULTS.md  run_qemu_usb_mouse.sh  usb_mouse_driver.py  usb_mouse_hw.cpp
usb_msc_fs_test/: CMakeLists.txt
wprogram_parity_test/: CMakeLists.txt  HW-RESULTS.md  run_qemu_wprogram_parity.sh  wprogram_parity_test.cpp
(+373 files in other folders)
