cmake_minimum_required(VERSION 3.24)
project(sai_rx_test)
set(TEENSY_VERSION 117 CACHE STRING "")
include(${CMAKE_CURRENT_LIST_DIR}/../../../evkb.cmake)
teensy_add_executable(sai_rx_test sai_rx_test.cpp)
teensy_target_link_libraries(sai_rx_test cores)
target_link_libraries(sai_rx_test.elf stdc++)
target_link_libraries(sai_rx_test.elf m)
